# sampling

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: doc.yml  rust.yml  rustdoc.yaml  tests.yaml
benches/: bench.rs  hists.rs
sampling/: all.html  index.html  sidebar-items.js
sampling/bootstrap/: fn.bootstrap.html  fn.bootstrap_copyable.html  index.html  sidebar-items.js
sampling/entropic_sampling/: enum.EntropicErrors.html  index.html  sidebar-items.js  struct.EntropicSampling.html  struct.EntropicSamplingAdaptive.html  trait.Entropic.html  trait.EntropicEEH.html  trait.EntropicEnergy.html  trait.EntropicEnsemble.html  trait.EntropicHist.html
sampling/examples/: index.html  sidebar-items.js
sampling/glue/: enum.GlueErrors.html  enum.GlueWriteVerbosity.html  enum.LogBase.html  enum.SimProgress.html  enum.SimulationType.html  fn.average_merged_and_aligned.html  fn.derivative_merged_and_aligned.html  fn.glue_entropic.html  fn.glue_wl.html  fn.norm_log10_sum_to_1.html  index.html  sidebar-items.js  struct.GlueEntry.html  struct.GlueJob.html  struct.GlueResult.html  struct.GlueStats.html  struct.Glued.html  struct.IntervalSimStats.html  trait.GlueAble.html
sampling/heatmap/: enum.GnuplotAxis.html  enum.GnuplotPalette.html  enum.GnuplotPallet.html  enum.GnuplotTerminal.html  enum.HeatmapError.html  enum.Labels.html  fn.heatmap_index.html  index.html  sidebar-items.js  struct.ColorRGB.html  struct.CubeHelixParameter.html  struct.GnuplotAxis.html  struct.GnuplotPointSettings.html  struct.GnuplotSettings.html  struct.HeatmapF64.html  struct.HeatmapF64Mean.html  struct.HeatmapUsize.html  struct.HeatmapUsizeMean.html  struct.PaletteRGB.html  type.HeatmapU.html
sampling/histogram/: enum.Bin.html  enum.BinType.html  enum.HistErrors.html  enum.Outcome.html  fn.checked_mul_div_i128.html  fn.checked_mul_div_i16.html  fn.checked_mul_div_i32.html  fn.checked_mul_div_i64.html  fn.checked_mul_div_i8.html  fn.checked_mul_div_isize.html  fn.checked_mul_div_u128.html  fn.checked_mul_div_u16.html  fn.checked_mul_div_u32.html  fn.checked_mul_div_u64.html  fn.checked_mul_div_u8.html  fn.checked_mul_div_usize.html  index.html  sidebar-items.js  struct.AtomicGenericHist.html  struct.AtomicHistogramFloat.html  struct.AtomicHistogramInt.html  struct.BinningWithWidth.html  struct.FastSingleIntBinning.html  struct.GenericAtomicHist.html  struct.GenericHist.html  struct.HistogramFast.html  struct.HistogramFloat.html  struct.HistogramInt.html  trait.AtomicHistogram.html  trait.AtomicHistogramVal.html  trait.BinDisplay.html  trait.Binning.html  trait.HasUnsignedVersion.html  trait.Histogram.html  trait.HistogramCombine.html  trait.HistogramIntervalDistance.html  trait.HistogramPartition.html  trait.HistogramVal.html  trait.IntervalOrder.html  type.AtomicHistF32.html  (+63 more)
sampling/metropolis/: enum.MetropolisError.html  index.html  sidebar-items.js  struct.Metropolis.html  type.MetF32.html  type.MetF64.html  type.MetI128.html  type.MetI16.html  type.MetI32.html  type.MetI64.html  type.MetI8.html  type.MetIsize.html  type.MetU128.html  type.MetU16.html  type.MetU32.html  type.MetU64.html  type.MetU8.html  type.MetUsize.html
sampling/rees/: fn.merged_log10_prob.html  fn.merged_log10_prob_rees.html  fn.merged_log10_probability_and_align.html  fn.merged_log10_probability_and_align_ignore.html  fn.merged_log_prob.html  fn.merged_log_prob_ignore.html  fn.merged_log_prob_rees.html  fn.merged_log_probability_and_align.html  fn.merged_log_probability_and_align_ignore.html  index.html  sidebar-items.js  struct.ReesWalker.html  struct.ReplicaExchangeEntropicSampling.html  type.Rees.html
sampling/rewl/: enum.ExtremeInterval.html  enum.RewlBuilderErr.html  enum.RewlCreationErrors.html  enum.ThresholdErrors.html  fn.log10_probability_and_align.html  fn.log10_probability_and_align_ignore.html  index.html  (+15 more)
search.index/: 033b79d99e8f.js  0341e26696dc.js  0361617888b5.js  054fc7c78272.js  05d14099f5da.js  06f8843e4ef6.js  0b88a7e76218.js  0bbbec1a521e.js  0c2ad3781a52.js  0c4b75819604.js  0ca207cd49b2.js  0d591c2d9e32.js  0e5743164060.js  0e9e118f549f.js  101e357326ae.js  106bfc3758d1.js  107d5a9a26e1.js  11b149f381b5.js  11e21709af53.js  1386de816a0f.js  13bb460bd47c.js  14862bf1ff8d.js  14ac596c3623.js  15245dd943d7.js  15e0224699f8.js  15e531996a65.js  18b617ef5bea.js  18be9c29d618.js  1a241cbcfd24.js  1a5e670c4eee.js  1c74e1a1425d.js  1d7dd071e8f8.js  1de5a797a5b4.js  1e75f77c213c.js  1f2322d99cbb.js  1fa93490c308.js  20bb3dbb4ea5.js  20e888e3028d.js  216190a04213.js  2365ce63f51b.js  (+135 more)
src/: bootstrap.rs  entropic_sampling.rs  examples.rs  glue.rs  grid.rs  heatmap.rs  histogram.rs  lib.rs  metropolis.rs  metropolis_helper.rs  rees.rs  rewl.rs  traits.rs  wang_landau.rs
(+266 files in other folders)
