[package]
name = "sampling"
version = "0.2.0"
rust-version = "1.60.0"
authors = ["Yannick Feld <yannick.feld@uol.de>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/Pardoxa/sampling"
keywords = [
    "large-deviation",
    "Wang-Landau",
    "Histogram",
    "Heatmap",
    "Replica-Exchange"
]
license = "MIT OR Apache-2.0"
categories = ["science", "mathematics"]
documentation = "https://docs.rs/sampling/0.1.1"
homepage = "https://www.yfeld.de"
exclude = [
    ".github/*",
    "TODO.md",
    "*.dat",
    "*.html",
    "*.pdf",
    "benches/*",
    "target/*",
    ".gitignore",
    "src/examples/ising_spins.rs",
    "CHANGELOG.md"
]
description = "Large-deviation Algorithms like Wang-Landau, Entropic sampling, Replica-Exchange Wang-Landau, Heatmaps, Histograms and bootstrap resampling. This is intended for scientific simulations"

[dependencies]
rand = { version = "^0.8.2"}
serde = { version = "1.0", optional = true, features = ["derive"] }
num-traits = "^0.2"
transpose = "^0.2"
average = { version = "^0.13", optional = true }
rayon = { version = "^1.5", optional = true }
paste = "1.0"

[dev-dependencies]
serde_json = "1.0"
criterion = "0.3"
statrs = "0.15.0"
rand_pcg = { version = "^0.3.0", features = ["serde1"]}

[features]
serde_support = ["serde"]
bootstrap = ["average"]
sweep_time_optimization = []
sweep_stats = ["sweep_time_optimization"]
replica_exchange = ["rayon"]
default = ["serde_support", "bootstrap", "replica_exchange"]