[package]
name = "sampling"
version = "0.3.0"
rust-version = "1.80.0"
authors = ["Yannick Feld <yannick.feld@uol.de>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/Pardoxa/sampling"
keywords = [
    "large-deviation",
    "Wang-Landau",
    "Histogram",
    "Heatmap",
    "Replica-Exchange"
]
license = "MIT OR Apache-2.0"
categories = ["science", "mathematics"]
documentation = "https://docs.rs/sampling/0.2.0"
homepage = "https://www.yfeld.de"
exclude = [
    ".github/*",
    "TODO.md",
    "*.dat",
    "*.html",
    "*.pdf",
    "benches/*",
    "target/*",
    ".gitignore",
    "src/examples/ising_spins.rs",
    "CHANGELOG.md"
]
description = "Large-deviation Algorithms like Wang-Landau, Entropic sampling and Replica-Exchange Wang-Landau. Also contains Binning, Histograms, Heatmaps and bootstrap resampling. This is intended for scientific simulations"

[dependencies]
rand = { version = "^0.9.0"}
serde = { version = "^1.0", optional = true, features = ["derive"] }
num-traits = "^0.2"
transpose = "^0.2"
rayon = { version = "^1.10", optional = true }
paste = "^1.0"
num-bigint = "^0.4.6"
average = { version = "0.16.0", default-features = false, features = ["serde"]}

[dev-dependencies]
serde_json = "^1.0"
criterion = "0.5.1"
statrs = "0.18.0"
rand_pcg = { version = "^0.9.0", features = ["serde"]}
rayon = { version = "^1.5" }

[features]
serde_support = ["serde"]
sweep_time_optimization = []
sweep_stats = ["sweep_time_optimization"]
replica_exchange = ["rayon"]
default = ["serde_support", "replica_exchange"]

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "hists"
harness = false